Creation of more advanced search results and beginning of CSS styling

--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,3 +1,20 @@
-.Dictionary {
-  background: red;
+.Search-form {
+  padding: 10px 20px;
+  align-items: center;
+}
+
+.Search-button {
+  background-color: #1a70f2;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 10px 20px;
+  margin-left: 30px;
+  align-items: center;
+  border-radius: 5px;
+}
+
+.Search-button:hover {
+  background-color: #92e0fc;
 }
