--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,23 @@
 .App {
   text-align: center;
+  background-color: #ffff;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: #0d1117;
+  background-color: #d6f8f9;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 .App-header {
   margin: 30px 0;
+  font-size: 50px;
 }
 
 .App-footer {
-  text-align: center;
   margin: 30px 0;
+  font-size: small;
 }
