--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,8 +1,3 @@
-.Search-form {
-  padding: 10px 20px;
-  align-items: center;
-}
-
 .Search-button {
   background-color: #1a70f2;
   color: white;
@@ -17,4 +12,12 @@
 
 .Search-button:hover {
   background-color: #92e0fc;
+}
+
+.Dictionary section {
+  padding: 10px 20px;
+  align-items: center;
+  border-radius: 16px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+  margin: 30px;
 }
