--- a/src/Results.css
+++ b/src/Results.css
@@ -1,6 +1,18 @@
-.Dictionary section {
-  padding: 10px 20px;
-  align-items: center;
-  border-radius: 16px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.7);
+.Results h2 {
+  font-size: 32px;
+  font-weight: bold;
+  line-height: 1.5;
+  text-transform: capitalize;
+}
+
+.Results Phonetic-result {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.Results h3 {
+  font-size: 25px;
+  font-weight: bold;
+  line-height: 1.5;
+  text-transform: capitalize;
 }
