--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -1,5 +1,13 @@
-Synonyms .Synonyms-result {
-  font-size: 18px;
-  line-height: 1.5;
+.Synonyms {
+  margin: 20px 0 0;
+  padding: 0;
+}
+
+.Synonyms li {
+  display: inline-block;
+  list-style: none;
   text-transform: capitalize;
+  font-size: 13px;
+  padding-right: 15px;
+  line-height: 1;
 }
